02- k8s-resources-yaml/01-GKE-Gateway-API-Regional-LB-StaticIP/01-myapp2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  #Dictionary
  name: myapp2-deployment
spec:
  # Dictionary
  replicas: 2
  selector:
    matchLabels:
      app: myapp2
  template:
    metadata:
      # Dictionary
      name: myapp2-pod
      labels:
        # Dictionary
        app: myapp2 # Key value pairs
    spec:
      containers:
      # List
      - name: myapp2-container
        image: aslam24/nginx-web-fablesmaster:v1
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "20Mi" #"256Mi" # 128 MebiByte is equal to 135 Megabyte (MB)
            cpu: "20m" #"250m" # `m` means milliCPU
          limits:
            memory: "30Mi" #"512Mi"
            cpu: "30m" #"400m" # 1000m is equal to 1 VCPU core
