02- k8s-resources-yaml/01-GKE-Gateway-API-Regional-LB-StaticIP/02-myapp2-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp2-service
spec:
  type: ClusterIP # ClusterIP, # NodePort # LoadBalancer
  selector:
    app: myapp2
  ports:
  - name: http
    port: 80 # Service Port
    targetPort: 80 # Container Port
