02- k8s-resources-yaml/01-GKE-Gateway-API-Regional-LB-StaticIP/03-myapp2-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mygateway1-regional-staticip
spec:
  gatewayClassName: gke-l7-regional-external-managed
  listeners:
  - name: http
    protocol: HTTP
    port: 80
  addresses:
  - type: NamedAddress
    value: my-regional-pip

## Documentation Links ##
# Gateway Address
# https://gateway-api.sigs.k8s.io/reference/spec/#gateway.networking.k8s.io/v1.GatewayAddress    

# Gateway Address Type
# https://gateway-api.sigs.k8s.io/reference/spec/#gateway.networking.k8s.io/v1.AddressType

#gcloud compute addresses create my-regional-pip \
#--region us-central1 \
#--network-tier STANDARD or PREMIUM 

# gcloud compute addresses list
# gcloud compute addresses describe my-regional-pip  --region us-central1
# gcloud compute addresses delete my-regional-pip --region us-central1
