02- k8s-resources-yaml/01-GKE-Gateway-API-Regional-LB-StaticIP/04-myapp2-gateway-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-external-http-staticip
spec:
  parentRefs:
  - kind: Gateway
    name: mygateway1-regional-staticip
  rules:
  - backendRefs:
    - name: myapp2-service
      port: 80
      weight: 100
